# lib_webrtc_vad

./: NEWS  README  configure.ac
src/: Makefile.am
src/webrtc/common_audio/vad/: vad_filterbank.c  vad_filterbank.h
test/: Makefile.am  main.cpp
